# th_th

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  th_py-2.0.1-py3-none-any.whl
th_py/: __init__.py  care.py  cate.py  egg.py  main.py
