[build-system]
requires = ["setuptools","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "th-py"
version = "2.0.1"
description = "Pure Python Terminal Editor"
requires-python = ">=3.6"
dependencies = [
    "text-discoloration>=2.7.2"
]

[project.scripts]
th = "th_py.main:main"
thv = "th_py.main:thv"
